force-app/main/default/objects/Evento_financeiro__c/Evento_financeiro__c.object-meta.xml
<CustomObject>
    <label>Evento Financeiro</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Evento Financeiro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eventos Financeiros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>