force-app/main/default/objects/Evento_financeiro__c/fields/agente__c.field-meta.xml
<CustomField>
    <fullName>agente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>agente</label>
    <type>Checkbox</type>
</CustomField>