force-app/main/default/objects/Evento_financeiro__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eventos Financeiros</relationshipLabel>
    <relationshipName>Eventos_Financeiros</relationshipName>
    <type>Lookup</type>
</CustomField>