force-app/main/default/objects/Evento_financeiro__c/fields/Cobrador__c.field-meta.xml
<CustomField>
    <fullName>Cobrador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cobrador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eventos_Financeiros</relationshipName>
    <type>Lookup</type>
</CustomField>