force-app/main/default/objects/Evento_financeiro__c/fields/data__c.field-meta.xml
<CustomField>
    <fullName>data__c</fullName>
    <label>Data da promessa</label>
    <type>Date</type>
</CustomField>