force-app/main/default/objects/Evento_financeiro__c/fields/Descricao_evento__c.field-meta.xml
<CustomField>
    <fullName>Descricao_evento__c</fullName>
    <label>Descrição do Evento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>