force-app/main/default/objects/Evento_financeiro__c/fields/Meio_de_cobranca__c.field-meta.xml
<CustomField>
    <fullName>Meio_de_cobranca__c</fullName>
    <label>Meio de cobrança</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ligação</fullName>
            </value>
            <value>
                <fullName>Mensagem</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>