force-app/main/default/objects/Evento_financeiro__c/fields/numero_contactado__c.field-meta.xml
<CustomField>
    <fullName>numero_contactado__c</fullName>
    <label>numero contactado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>