force-app/main/default/objects/Evento_financeiro__c/fields/Pago__c.field-meta.xml
<CustomField>
    <fullName>Pago__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pago</label>
    <type>Checkbox</type>
</CustomField>