force-app/main/default/objects/Evento_financeiro__c/fields/Resumo__c.field-meta.xml
<CustomField>
    <fullName>Resumo__c</fullName>
    <label>Resumo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>