force-app/main/default/objects/Evento_financeiro__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acordo</fullName>
            </value>
            <value>
                <fullName>Agendamento</fullName>
            </value>
            <value>
                <fullName>Caso para Análise</fullName>
            </value>
            <value>
                <fullName>Cliente Alega Desconhecer Dívida</fullName>
            </value>
            <value>
                <fullName>Cliente Pesquisado Lemitt</fullName>
            </value>
            <value>
                <fullName>Cobrança</fullName>
                <isActive>false</isActive>
                <label>Cobrança</label>
            </value>
            <value>
                <fullName>Cobrança via E-mail</fullName>
            </value>
            <value>
                <fullName>Contato com Cliente</fullName>
            </value>
            <value>
                <fullName>Contato Receptivo</fullName>
            </value>
            <value>
                <fullName>Devolução</fullName>
            </value>
            <value>
                <fullName>Falecido</fullName>
            </value>
            <value>
                <fullName>Mensagem Enviada</fullName>
            </value>
            <value>
                <fullName>Notificação Extrajudicial</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
            <value>
                <fullName>Pendência de Entrega</fullName>
            </value>
            <value>
                <fullName>Pendência de Treinamento</fullName>
            </value>
            <value>
                <fullName>Previsão</fullName>
                <isActive>false</isActive>
                <label>Previsão</label>
            </value>
            <value>
                <fullName>Promessa de Pagamento</fullName>
            </value>
            <value>
                <fullName>Recado com Terceiros</fullName>
            </value>
            <value>
                <fullName>Renegociação Jurídico</fullName>
            </value>
            <value>
                <fullName>Telefone Caixa Postal</fullName>
            </value>
            <value>
                <fullName>Telefone Desligado</fullName>
            </value>
            <value>
                <fullName>Telefone Não Atende</fullName>
            </value>
            <value>
                <fullName>Telefone Não Existe</fullName>
            </value>
            <value>
                <fullName>Telefone Ocupado</fullName>
            </value>
            <value>
                <fullName>Tratativa com Gestor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>