force-app/main/default/objects/Evento_financeiro__c/fields/Titulo__c.field-meta.xml
<CustomField>
    <fullName>Titulo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titulo</label>
    <referenceTo>Cobranca__c</referenceTo>
    <relationshipLabel>Eventos Financeiros</relationshipLabel>
    <relationshipName>Eventos_Financeiros</relationshipName>
    <type>Lookup</type>
</CustomField>