force-app/main/default/objects/Evento_financeiro__c/fields/valor_acordado__c.field-meta.xml
<CustomField>
    <fullName>valor_acordado__c</fullName>
    <label>Valor acordado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>